test/spec/loop-end-label-superfluous.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/loop-end-label-superfluous.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/loop-end-label-superfluous.fail.wast:1:24: unexpected label "$l"
(module (func loop end $l))
                       ^^
;;; STDERR ;;)
